--- a/app/frontend/src/sass/main.scss
+++ b/app/frontend/src/sass/main.scss
@@ -1,3 +1,18 @@
-body {
-  background-color: white;
-}
+/* YHTEISET
+----------------------------------------------------------------------------- */
+@import "yhteiset/_yhteiset";
+
+/* AITUHAUN PERUSTYYLIT
+----------------------------------------------------------------------------- */
+@import "partials/_footer";
+@import "partials/_base";
+@import "partials/_typography";
+@import "partials/_components";
+
+/* NÄKYMÄT
+------------------------------------------------------------------------------*/
+
+
+/* MQ
+------------------------------------------------------------------------------*/
+@import "partials/_mediaquery";
