OPH-1339: Leiskan perustyylit ja asettelu

--- a/app/frontend/src/sass/yhteiset/_yhteiset.scss
+++ b/app/frontend/src/sass/yhteiset/_yhteiset.scss
@@ -3,6 +3,7 @@
 @import "_baseline";
 @import "_theme";
 @import "_typography";
+@import "_icons";
 @import "_mixins";
 @import "_buttons";
 @import "_forms";
