SL-1339: Hakukentät etusivulle.

--- a/app/frontend/src/template/etusivu/etusivu.html
+++ b/app/frontend/src/template/etusivu/etusivu.html
@@ -1,1 +1,11 @@
 <div translate="etusivu.teksti"></div>
+
+<fieldset class="search-field">
+    <label translate="etusivu.tutkinnon_nimi"></label>
+    <input type="text" placeholder="{{ 'etusivu.tutkinnon_nimi_placeholder' | translate }}" ng-model="tutkinto">
+</fieldset>
+
+<fieldset>
+    <label translate="etusivu.opintoala"></label>
+    <select></select>
+</fieldset>
