--- a/app/frontend/src/template/etusivu/etusivu.html
+++ b/app/frontend/src/template/etusivu/etusivu.html
@@ -2,12 +2,12 @@
 
 <fieldset class="search-field">
     <label translate="etusivu.tutkinnon_nimi"></label>
-    <input type="text" placeholder="{{ 'etusivu.tutkinnon_nimi_placeholder' | translate }}" ng-model="tutkinto">
+    <input type="text" placeholder="{{ 'etusivu.tutkinnon_nimi_placeholder' | translate }}" ng-model="haku.tutkinto" ng-model-options="{debounce: 500}">
 </fieldset>
 
 <fieldset>
     <label translate="etusivu.opintoala"></label>
-    <select>
+    <select ng-model="haku.opintoala">
         <option></option>
         <optgroup ng-repeat="koulutusala in koulutusalat" label="{{ koulutusala | lokalisoiKentta:'koulutusala_nimi' }}">
             <option ng-repeat="opintoala in koulutusala.opintoalat" value="{{ opintoala.opintoala_tkkoodi }}">{{ opintoala | lokalisoiKentta:'opintoala_nimi' }}</option>
