--- a/app/frontend/src/sass/main.scss
+++ b/app/frontend/src/sass/main.scss
@@ -1,6 +1,7 @@
 /* YHTEISET
 ----------------------------------------------------------------------------- */
 @import "yhteiset/_yhteiset";
+@import "yhteiset/_ohje";
 
 /* AITUHAUN PERUSTYYLIT
 ----------------------------------------------------------------------------- */
