Valintojen tallennus sessionStorageen.

--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -15,3 +15,5 @@
     {{ osa | lokalisoiKentta:'nimi' }}
   </label>
 </div>
+
+<button ng-click="eteenpain()" translate="osien-valinta.eteenpain"></button>
