OPH-1347: UI-pohjaa, Bootstrap, Fontit

--- a/app/frontend/src/sass/yhteiset/_buttons.scss
+++ b/app/frontend/src/sass/yhteiset/_buttons.scss
@@ -5,7 +5,7 @@ button {
   border: none;
   height: $baseline*1.5;
   box-shadow: none;
-  margin: $marginS $marginL $marginS 0;
+  /* margin: $marginS $marginL $marginS 0; */
   cursor: pointer;
   padding-left: 15px;
   padding-right: 15px;
