--- a/app/frontend/src/sass/yhteiset/_typography.scss
+++ b/app/frontend/src/sass/yhteiset/_typography.scss
@@ -44,7 +44,7 @@ h3 {
 label {
   font-size: 1em;
   font-family: $font-body;
-  font-weight: 700;
+  font-weight: 300;
   & input {
     font-weight: normal;
   }
@@ -90,4 +90,11 @@ a {color : $primary-color; text-decoration: none;
   font-style: normal;
   font-weight: 700;
   src: local('Open Sans Condensed Bold'), local('OpenSans-CondensedBold'), url('../font/opensans-condensed-bold.woff') format('woff');
+}
+
+/* Override bootstrap icons default font-path. fonts -> font */
+@font-face {
+  font-family: 'Glyphicons Halflings';
+  src: url('../font/glyphicons-halflings-regular.eot');
+  src: url('../font/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../font/glyphicons-halflings-regular.woff') format('woff'), url('../font/glyphicons-halflings-regular.ttf') format('truetype'), url('../font/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
