--- a/app/frontend/src/template/etusivu/etusivu.html
+++ b/app/frontend/src/template/etusivu/etusivu.html
@@ -1,32 +1,54 @@
 <ohje tunniste="etusivu"></ohje>
 
 <div translate="etusivu.teksti"></div>
+<br />
 
-<fieldset class="search-field">
-  <label translate="etusivu.tutkinnon_nimi"></label>
-  <input type="text" placeholder="{{ 'etusivu.tutkinnon_nimi_placeholder' | translate }}" ng-model="haku.tutkinto" ng-model-options="{debounce: 500}">
-</fieldset>
 
-<fieldset>
-  <label translate="etusivu.opintoala"></label>
-  <select ng-model="haku.opintoala">
-    <option></option>
-    <optgroup ng-repeat="koulutusala in koulutusalat" label="{{ koulutusala | lokalisoiKentta:'koulutusala_nimi' }}">
-      <option ng-repeat="opintoala in koulutusala.opintoalat" value="{{ opintoala.opintoala_tkkoodi }}">{{ opintoala | lokalisoiKentta:'opintoala_nimi' }}</option>
-    </optgroup>
-  </select>
-</fieldset>
+<div class="panel panel-primary">
+  <div class="panel-heading">
+    <h3 class="panel-title">Aloita etsimällä ja valitsemalla haluamasi tutkinto</h3>
+  </div>
+  <div class="panel-body">
+    <fieldset class="search-field">
+      <label translate="etusivu.tutkinnon_nimi"></label>
+      <input type="text" placeholder="{{ 'etusivu.tutkinnon_nimi_placeholder' | translate }}" ng-model="haku.tutkinto" ng-model-options="{debounce: 500}">
+    </fieldset>
 
-<table>
-  <thead>
-    <tr>
-      <th translate="etusivu.tutkinnon_nimi"></th>
-      <th translate="etusivu.opintoala"></th>
-  </thead>
-  <tbody>
-    <tr ng-repeat="tutkinto in tutkinnot">
-      <td><a href="#/osien-valinta?tutkinto={{tutkinto.tutkintotunnus}}">{{ tutkinto | lokalisoiKentta:'nimi' }}</a></td>
-      <td>{{ tutkinto | lokalisoiKentta:'opintoala_nimi' }}</td>
-    </tr>
-  </tbody>
-</table>
+    <fieldset>
+      <label translate="etusivu.opintoala"></label>
+      <select ng-model="haku.opintoala">
+        <option></option>
+        <optgroup ng-repeat="koulutusala in koulutusalat" label="{{ koulutusala | lokalisoiKentta:'koulutusala_nimi' }}">
+          <option ng-repeat="opintoala in koulutusala.opintoalat" value="{{ opintoala.opintoala_tkkoodi }}">{{ opintoala | lokalisoiKentta:'opintoala_nimi' }}</option>
+        </optgroup>
+      </select>
+    </fieldset>
+    <!--
+    <table ng-show="tutkinnot" class="">
+      <thead>
+      <tr>
+        <th translate="etusivu.tutkinnon_nimi"></th>
+        <th translate="etusivu.opintoala"></th>
+        <th>&nbsp;</th>
+      </thead>
+      <tbody>
+      <tr ng-repeat="tutkinto in tutkinnot">
+        <td><a href="#/osien-valinta?tutkinto={{tutkinto.tutkintotunnus}}">{{ tutkinto | lokalisoiKentta:'nimi' }}</a></td>
+        <td>{{ tutkinto | lokalisoiKentta:'opintoala_nimi' }}</td>
+        <td><a class="btn btn-primary pull-right" href="#" role="button">Valitse tutkinto&nbsp;<span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a></td>
+      </tr>
+      </tbody>
+    </table>
+    -->
+    <div class="col-md-8" style="padding: 0px;">
+        <a class="btn btn-primary pull-left" style="width: 100%; text-align: left; margin-bottom: 5px; white-space: normal;" href="#/osien-valinta?tutkinto={{tutkinto.tutkintotunnus}}" role="button" ng-repeat="tutkinto in tutkinnot">
+          {{ tutkinto | lokalisoiKentta:'nimi' }}&nbsp;({{ tutkinto | lokalisoiKentta:'opintoala_nimi' }})&nbsp;&nbsp;
+          <span class="glyphicon glyphicon-arrow-right pull-right" aria-hidden="true"></span>
+        </a>
+    </div>
+  </div>
+</div>
+
+
+
+
