OPH-1347: Arviointi-sivun UI-komponentteja

--- a/app/frontend/src/sass/main.scss
+++ b/app/frontend/src/sass/main.scss
@@ -12,7 +12,7 @@
 
 /* NÄKYMÄT
 ------------------------------------------------------------------------------*/
-
+@import "views/_arviointi";
 
 /* MQ
 ------------------------------------------------------------------------------*/
