--- a/app/frontend/src/template/arviointi/arviointi.html
+++ b/app/frontend/src/template/arviointi/arviointi.html
@@ -3,7 +3,28 @@
     <h3 class="panel-title">Arvioi osaamisesi</h3>
   </div>
   <div class="panel-body">
-    <h2>Automaalarimestarin erikoisammattitutkinto</h2>
+    <h2>Tutkinnon osa 1</h2>
+    <h3>Automaalarimestarin erikoisammattitutkinto</h3>
+
+    <section class="kohdealue">
+      <h4>Arvioinnin kohdealue (otsikko)</h4>
+      <section class="kysymys">
+        <p>Arvioinnin kohde 1 (kysymys)</p>
+
+        <div class="vastaus_valinnat arvosana">
+          <label ng-repeat="vaihtoehto in [1,2,3,4,5]" style="display: block" ng-class="{checked: kysymys.vastaus == vaihtoehto}">
+            <input type="radio" ng-model="kysymys.vastaus" ng-value="vaihtoehto" name="kysymys" ng-required="kysymys.pakollinen">
+            {{ vaihtoehto }}
+          </label>
+
+          <label style="display: block" class="vapaateksti-toggle" tooltip="Anna vapaatekstivastaus klikkaamalla" tooltip-placement="top">
+            <span class="glyphicon glyphicon-align-left"></span>
+          </label>
+
+        </div>
+      </section>
+    </section>
+
   </div>
   <div class="panel-footer">
     <div class="row">
