--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -27,11 +27,11 @@
       <div class="col-md-12">
         <button class="btn btn-primary pull-right" ng-click="eteenpain()" role="button">
           Arvioi osaaminen &nbsp;
-          <span class="glyphicon glyphicon-arrow-right pull-right" aria-hidden="true"></span>
+          <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
         </button>
 
         <a class="btn btn-primary pull-left" href="#/" role="button">
-          <span class="glyphicon glyphicon-arrow-left pull-left" aria-hidden="true"></span>&nbsp;
+          <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>&nbsp;
           Valitse tutkinto
         </a>
       </div>
