OPH-1369: Uudelleennimeä tutkinnon osan osatunnus

--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -9,7 +9,7 @@
     <h3 translate="osien-valinta.pakolliset_osat"></h3>
     <div ng-repeat="osa in tutkinnonosat | filter: {pakollinen: true}">
       <label>
-        <input type="checkbox" ng-model="valinnat[osa.tutkinnonosatunnus]" ng-click="isValinnatempty()">
+        <input type="checkbox" ng-model="valinnat[osa.osatunnus]" ng-click="isValinnatempty()">
         {{ osa | lokalisoiKentta:'nimi' }}
       </label>
     </div>
@@ -17,7 +17,7 @@
     <h3 translate="osien-valinta.valinnaiset_osat"></h3>
     <div ng-repeat="osa in tutkinnonosat | filter: {pakollinen: false}">
       <label>
-        <input type="checkbox" ng-model="valinnat[osa.tutkinnonosatunnus]" ng-click="isValinnatempty()">
+        <input type="checkbox" ng-model="valinnat[osa.osatunnus]" ng-click="isValinnatempty()">
         {{ osa | lokalisoiKentta:'nimi' }}
       </label>
     </div>
