Korjaa opintoala-valinnan valueksi opintoalatunnus.
Ks. 94531b2cd93052fd8b5f9be85a405176569397d2

--- a/app/frontend/src/template/etusivu/etusivu.html
+++ b/app/frontend/src/template/etusivu/etusivu.html
@@ -19,7 +19,7 @@
       <select ng-model="haku.opintoala">
         <option></option>
         <optgroup ng-repeat="koulutusala in koulutusalat" label="{{ koulutusala | lokalisoiKentta:'koulutusala_nimi' }}">
-          <option ng-repeat="opintoala in koulutusala.opintoalat" value="{{ opintoala.opintoala_tkkoodi }}">{{ opintoala | lokalisoiKentta:'opintoala_nimi' }}</option>
+          <option ng-repeat="opintoala in koulutusala.opintoalat" value="{{ opintoala.opintoalatunnus }}">{{ opintoala | lokalisoiKentta:'opintoala_nimi' }}</option>
         </optgroup>
       </select>
     </fieldset>
