--- a/app/frontend/src/template/etusivu/etusivu.html
+++ b/app/frontend/src/template/etusivu/etusivu.html
@@ -41,7 +41,7 @@
     </table>
     -->
     <div class="col-md-8" style="padding: 0px;">
-        <a class="btn btn-primary pull-left" style="width: 100%; text-align: left; margin-bottom: 5px; white-space: normal;" href="#/osien-valinta?tutkinto={{tutkinto.tutkintotunnus}}" role="button" ng-repeat="tutkinto in tutkinnot">
+        <a class="btn btn-primary pull-left" style="width: 100%; text-align: left; margin-bottom: 5px; white-space: normal;" href="#/osien-valinta?tutkinto={{tutkinto.tutkintotunnus}}&peruste={{tutkinto.peruste_diaarinumero}}" role="button" ng-repeat="tutkinto in tutkinnot">
           {{ tutkinto | lokalisoiKentta:'nimi' }}&nbsp;({{ tutkinto | lokalisoiKentta:'opintoala_nimi' }})&nbsp;&nbsp;
           <span class="glyphicon glyphicon-arrow-right pull-right" aria-hidden="true"></span>
         </a>
