OPH-1370: Osien valinta -sivun osien tallennus ja arviointiin siirtyminen.

--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -25,7 +25,7 @@
   <div class="panel-footer">
     <div class="row">
       <div class="col-md-12">
-        <button class="btn btn-primary pull-right" ng-click="eteenpain()" role="button">
+        <button class="btn btn-primary pull-right" ng-click="eteenpain()" ng-disabled="seuraavaTutkinnonosa() === undefined" role="button">
           Arvioi osaaminen &nbsp;
           <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
         </button>
