--- a/app/frontend/src/template/arviointi/arviointi.html
+++ b/app/frontend/src/template/arviointi/arviointi.html
@@ -52,15 +52,23 @@
   <div class="panel-footer">
     <div class="row">
       <div class="col-md-12">
-        <button class="btn btn-primary pull-right" role="button">
+        <button class="btn btn-primary pull-right" role="button" ng-if="seuraavaTutkinnonosa() !== undefined" ng-click="seuraavaOsa()">
+          Arvioi osaaminen
+          <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
+        </button>
+        <button class="btn btn-primary pull-right" role="button" ng-if="seuraavaTutkinnonosa() === undefined">
           Näytä raportti&nbsp;
           <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
         </button>
 
-        <a class="btn btn-primary pull-left" href="#/osien-valinta" role="button">
+        <button class="btn btn-primary pull-left" role="button" ng-if="edellinenTutkinnonosa() === undefined" ng-click="palaaOsienValintaan()">
           <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>&nbsp;
           Valitse tutkinnon osat
-        </a>
+        </button>
+        <button class="btn btn-primary pull-left" role="button" ng-if="edellinenTutkinnonosa() !== undefined" ng-click="edellinenOsa()">
+          <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>&nbsp;
+          Arvioi osaaminen
+        </button>
       </div>
     </div>
   </div>
