Vapaatekstivastausnapin ikonin muutos

--- a/app/frontend/src/template/arviointi/arviointi.html
+++ b/app/frontend/src/template/arviointi/arviointi.html
@@ -22,9 +22,9 @@
             En osaa sanoa
           </label>
 
-          <label style="display: block" class="vapaateksti-toggle" tooltip="Anna vapaatekstivastaus klikkaamalla" tooltip-placement="top" ng-class="{checked: vapaateksti1}">
+          <label style="display: block" class="vapaateksti-toggle" tooltip="Anna vapaatekstivastaus" tooltip-placement="top" ng-class="{checked: vapaateksti1}">
             <input type="checkbox" ng-model="vapaateksti1" ng-value="false" name="vapaateksti">
-            <span class="glyphicon glyphicon-align-left"></span>
+            <span class="glyphicon glyphicon-pencil"></span>
           </label>
         </div>
         <div class="row">
@@ -47,9 +47,9 @@
             En osaa sanoa
           </label>
 
-          <label style="display: block" class="vapaateksti-toggle" tooltip="Anna vapaatekstivastaus klikkaamalla" tooltip-placement="top" ng-class="{checked: vapaateksti2}">
+          <label style="display: block" class="vapaateksti-toggle" tooltip="Anna vapaatekstivastaus" tooltip-placement="top" ng-class="{checked: vapaateksti2}">
             <input type="checkbox" ng-model="vapaateksti2" ng-value="false" name="vapaateksti">
-            <span class="glyphicon glyphicon-align-left"></span>
+            <span class="glyphicon glyphicon-pencil"></span>
           </label>
         </div>
         <div class="row">
