--- a/app/frontend/src/sass/yhteiset/_theme.scss
+++ b/app/frontend/src/sass/yhteiset/_theme.scss
@@ -5,11 +5,11 @@ $darker-gray: darken($gray-color, 20%);
 $darkest-gray: darken($gray-color, 40%);
 
 
-$primary-color: #107ea2;
-$lighter-primary: #43b1d5;
-$lightest-primary: #72c4e0;
-$darker-primary: #083f51;
-$darkest-primary: #042029;
+$primary-color: #4B90A6;
+$lighter-primary: #77aec0;
+$lightest-primary: #a9d6e0;
+$darker-primary: #3e798b;
+$darkest-primary: #335b6c;
 $disabled-primary-color: #a1d8ea;
 
 $primary-action-text: white;
