--- a/app/frontend/src/sass/yhteiset/_yhteiset.scss
+++ b/app/frontend/src/sass/yhteiset/_yhteiset.scss
@@ -6,8 +6,8 @@
 @import "_icons";
 @import "_mixins";
 @import "_buttons";
-@import "_forms";
+// @import "_forms";
 @import "_tables";
-@import "_search";
+//@import "_search";
 @import "_bootstrap";
 @import "_animate";
