--- a/app/frontend/src/template/etusivu/etusivu.html
+++ b/app/frontend/src/template/etusivu/etusivu.html
@@ -9,37 +9,52 @@
     <h3 class="panel-title">Aloita etsimällä ja valitsemalla haluamasi tutkinto</h3>
   </div>
   <div class="panel-body">
-    <fieldset class="search-field">
-      <label translate="etusivu.tutkinnon_nimi"></label>
-      <input type="text" placeholder="{{ 'etusivu.tutkinnon_nimi_placeholder' | translate }}" ng-model="haku.tutkinto" ng-model-options="{debounce: 500}">
-    </fieldset>
 
-    <fieldset>
-      <label translate="etusivu.opintoala"></label>
-      <select ng-model="haku.opintoala">
-        <option></option>
-        <optgroup ng-repeat="koulutusala in koulutusalat" label="{{ koulutusala | lokalisoiKentta:'nimi' }}">
-          <option ng-repeat="opintoala in koulutusala.opintoalat" value="{{ opintoala.opintoalatunnus }}">{{ opintoala | lokalisoiKentta:'nimi' }}</option>
-        </optgroup>
-      </select>
-    </fieldset>
-    <!--
-    <table ng-show="tutkinnot" class="">
-      <thead>
-      <tr>
-        <th translate="etusivu.tutkinnon_nimi"></th>
-        <th translate="etusivu.opintoala"></th>
-        <th>&nbsp;</th>
-      </thead>
-      <tbody>
-      <tr ng-repeat="tutkinto in tutkinnot">
-        <td><a href="#/osien-valinta?tutkinto={{tutkinto.tutkintotunnus}}">{{ tutkinto | lokalisoiKentta:'nimi' }}</a></td>
-        <td>{{ tutkinto | lokalisoiKentta:'opintoala_nimi' }}</td>
-        <td><a class="btn btn-primary pull-right" href="#" role="button">Valitse tutkinto&nbsp;<span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a></td>
-      </tr>
-      </tbody>
-    </table>
-    -->
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label translate="etusivu.tutkinnon_nimi" for="tutkinnon-nimi"></label>
+          <input type="text" class="form-control" id="tutkinnon-nimi" placeholder="{{ 'etusivu.tutkinnon_nimi_placeholder' | translate }}" ng-model="haku.tutkinto" ng-model-options="{debounce: 500}">
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <label translate="etusivu.opintoala" for="opintoala"></label>
+        <select ng-model="haku.opintoala" id="opintoala" class="form-control">
+          <option></option>
+          <optgroup ng-repeat="koulutusala in koulutusalat" label="{{ koulutusala | lokalisoiKentta:'nimi' }}">
+            <option ng-repeat="opintoala in koulutusala.opintoalat" value="{{ opintoala.opintoalatunnus }}">{{ opintoala | lokalisoiKentta:'nimi' }}</option>
+          </optgroup>
+        </select>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <strong style="margin-bottom: -10px;"><br/>Valitse tutkintotyyppi</strong>
+        <div class="radio" style="margin-top: 0;">
+          <label>
+            <input type="radio" name="tutkintotyyppi" id="optionsRadios1" value="erikoisammattitutkinto" checked>
+            Erikoisammattitutkinto
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="tutkintotyyppi" id="optionsRadios1" value="perustutkinto">
+            Perustutkinto
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="tutkintotyyppi" id="optionsRadios1" value="ammattitutkinto">
+            Ammattitutkinto
+          </label>
+        </div>
+      </div>
+    </div>
+
     <div class="col-md-8" style="padding: 0px;">
         <a class="btn btn-primary pull-left" style="width: 100%; text-align: left; margin-bottom: 5px; white-space: normal;" href="#/osien-valinta?tutkinto={{tutkinto.tutkintotunnus}}&peruste={{tutkinto.peruste_diaarinumero}}" role="button" ng-repeat="tutkinto in tutkinnot" ng-click="tyhjennaValitutOsatunnukset()">
           {{ tutkinto | lokalisoiKentta:'nimi' }}&nbsp;({{ tutkinto | lokalisoiKentta:'opintoala_nimi' }})&nbsp;&nbsp;
