--- a/app/frontend/src/sass/yhteiset/_animate.scss
+++ b/app/frontend/src/sass/yhteiset/_animate.scss
@@ -20,3 +20,27 @@
 .reveal-animation.ng-leave.ng-leave-active {
   height: 0px;
 }
+
+
+.view-animate.ng-leave {
+  -webkit-transition: all 0ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
+  transition: all 0ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
+}
+
+.view-animate.ng-enter {
+  -webkit-transition: all 300ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
+  transition: all 300ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
+}
+
+.view-animate.ng-enter {
+  opacity: .0;
+}
+.view-animate.ng-leave {
+  opacity: 1;
+}
+.view-animate.ng-enter.ng-enter-active {
+  opacity: 1;
+}
+.view-animate.ng-leave.ng-leave-active {
+  opacity: .0;
+}
