--- a/app/frontend/src/template/arviointi/arviointi.html
+++ b/app/frontend/src/template/arviointi/arviointi.html
@@ -21,7 +21,7 @@
             En osaa sanoa
           </label>
 
-          <label style="display: block" class="vapaateksti-toggle" tooltip="Anna vapaatekstivastaus" tooltip-placement="top" ng-class="{checked: vapaateksti1}">
+          <label style="display: block" class="vapaateksti-toggle" tooltip="Anna vapaatekstivastaus" tooltip-placement="top" ng-class="{checked: vapaateksti_auki}">
             <input type="checkbox" ng-model="vapaateksti_auki" ng-value="false" name="vapaateksti">
             <span class="glyphicon glyphicon-pencil"></span>
           </label>
