--- a/app/frontend/src/template/arviointi/arviointi.html
+++ b/app/frontend/src/template/arviointi/arviointi.html
@@ -1,6 +1,6 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
-    <h3 class="panel-title">Arvioi osaamisesi - Automaalarimestarin erikoisammattitutkinto</h3>
+    <h3 class="panel-title">Arvioi osaamisesi - {{ tutkinto | lokalisoiKentta:'nimi' }}</h3>
   </div>
   <div class="panel-body">
     <h2>Tutkinnon osa 1</h2>
